[package]
name       = "sp1-ics07-tendermint-operator"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
sp1-sdk = { workspace = true, default-features = true }

serde_json      = { workspace = true }
serde           = { workspace = true }
serde_with      = { workspace = true, features = ["hex", "macros"] }
subtle-encoding = { workspace = true }

tokio              = { workspace = true }
futures            = { workspace = true }
dotenv             = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true, default-features = true }

ibc-proto        = { workspace = true }

tendermint-rpc                   = { workspace = true, features = ["http-client"] }
tendermint-light-client-verifier = { workspace = true }

ibc-client-tendermint-types = { workspace = true }
ibc-client-tendermint       = { workspace = true }
ibc-core-commitment-types   = { workspace = true }

prost = { workspace = true }
hex   = { workspace = true }

# borsh 0.10.4 required for solana-ibc-types compatibility (renamed to avoid workspace conflict)
borsh_0_10 = { package = "borsh", version = "0.10.4" }

solana-ibc-types = { path = "../solana/packages/solana-ibc-types", features = ["light-client"] }

ibc-eureka-solidity-types     = { workspace = true, features = ["rpc"] }
ibc-eureka-utils              = { workspace = true }
sp1-ics07-tendermint-prover   = { workspace = true }

alloy = { workspace = true, features = ["full", "node-bindings"] }
