[package]
name       = "ibc-eureka-relayer"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
ibc-eureka-relayer-core                 = { workspace = true, default-features = false }
ibc-eureka-relayer-eth-to-cosmos        = { workspace = true, default-features = false }
ibc-eureka-relayer-cosmos-to-eth        = { workspace = true, default-features = false }
ibc-eureka-relayer-cosmos-to-cosmos     = { workspace = true, default-features = false }
ibc-eureka-relayer-eth-to-cosmos-compat = { workspace = true, default-features = false }

tokio              = { workspace = true, default-features = true }
prometheus         = { workspace = true, default-features = true }
warp               = { workspace = true, default-features = true }
tracing            = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true }
clap               = { workspace = true, default-features = true }
anyhow             = { workspace = true, default-features = true, features = ["backtrace"] }

serde_json = { workspace = true, default-features = true }
