[package]
name = "sig-aggregator"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }


[dependencies]
toml         = "0.8"
tokio-stream = "0.1"
url          = { version = "2", features = ["serde"] }
tokio        = { workspace = true, features = ["full"] }

tonic = { workspace = true, default-features = true }
prost = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
clap  = { workspace = true, features = ["derive"] }
rand  = { workspace = true, default-features = true }
hex   = { workspace = true, default-features = true }

tracing-subscriber = { workspace = true, default-features = true }
alloy-primitives   = { workspace = true, default-features = true }

anyhow    = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
futures   = { workspace = true }
tracing   = { workspace = true, default-features = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = true }
