[package]
name = "sig-aggregator"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }


[dependencies]
tokio-stream = "0.1"

toml  = { workspace = true, default-features = true }

url              = { workspace = true, features = ["serde"] }
tower-http       = { workspace = true, features = ["trace"] }
tonic            = { workspace = true, default-features = true }
tonic-reflection = { workspace = true, default-features = true }

tokio = { workspace = true, features = ["full"] }
prost = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
clap  = { workspace = true, features = ["derive"] }
rand  = { workspace = true, default-features = true }
hex   = { workspace = true, default-features = true }

tracing-subscriber = { workspace = true, default-features = true }
alloy-primitives   = { workspace = true, default-features = true }

anyhow    = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
futures   = { workspace = true }
tracing   = { workspace = true, default-features = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = true }
