[workspace]
members = [
    "programs/ics07-tendermint",
    "tests",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
repository = "https://github.com/cosmos/solidity-ibc-eureka"
keywords   = ["cosmos", "ibc", "sp1", "tendermint", "ethereum", "bridge", "solidity", "eureka"]

[workspace.dependencies]
# Local tendermint light client packages
tendermint-light-client-update-client     = { path = "../../packages/tendermint-light-client/update-client", default-features = false }
tendermint-light-client-membership        = { path = "../../packages/tendermint-light-client/membership", default-features = false }
tendermint-light-client-misbehaviour      = { path = "../../packages/tendermint-light-client/misbehaviour", default-features = false }
tendermint-light-client-uc-and-membership = { path = "../../packages/tendermint-light-client/uc-and-membership", default-features = false }

# IBC and Tendermint dependencies
ibc-client-tendermint = { version = "0.57", default-features = false }
ibc-core-client = { version = "0.57", default-features = false }
ibc-core-client-types = { version = "0.57", default-features = false }
ibc-core-host-types = { version = "0.57", default-features = false }
ibc-core-commitment-types = { version = "0.57", default-features = false }
ibc-primitives = { version = "0.57", default-features = false }
ibc-proto = { version = "0.51", default-features = false }
tendermint = { version = "0.40", default-features = false }
tendermint-light-client-verifier = { version = "0.40", default-features = false }
time = { version = "0.3", default-features = false }

# Common dependencies
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2.0", default-features = false }
hex = { version = "0.4", default-features = false }
prost = { version = "0.13", default-features = false }

[profile.solana-release]
inherits = "release"
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.solana-release.build-override]
opt-level = 3
incremental = false
codegen-units = 1