[package]
name = "mock-ibc-app"
version.workspace = true
edition.workspace = true
description = "Mock IBC Application for testing Solana IBC Router"
license.workspace = true
repository.workspace = true
readme = "../../../README.md"
keywords = ["cosmos", "ibc", "solana", "test", "mock"]
categories = ["development-tools::testing"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_ibc_app"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang.workspace = true
solana-ibc-types.workspace = true
solana-ibc-macros.workspace = true

[lints]
workspace = true
