[package]
name = "mock-light-client"
version.workspace = true
description = "Mock light client for testing IBC router"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"
keywords = ["cosmos", "ibc", "solana", "test", "mock"]
categories = ["development-tools::testing"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_light_client"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang.workspace = true
ics25-handler.workspace = true
solana-ibc-types.workspace = true

[lints]
workspace = true
