[package]
name = "solana-light-client-interface"
version = "0.1.0"
edition = "2021"
description = "Shared interface for IBC light client implementations on Solana"
license = "MIT"
repository = "https://github.com/cosmos/solidity-ibc-eureka"

[dependencies]
anchor-lang = { workspace = true, features = ["derive"] }
