[package]
name        = "sp1-ics07-utils"
description = "sp1 ics07 utils"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

[dependencies]
tendermint-light-client-update-client = { workspace = true }
tendermint-light-client-verifier     = { workspace = true }
tendermint                           = { version = "0.40", default-features = false }

ibc-eureka-solidity-types          = { workspace = true }
ibc-client-tendermint              = { workspace = true, features = ["serde"] }
ibc-core-client-types              = { workspace = true }
alloy-sol-types                    = { workspace = true }
