[package]
name = "solana-ibc-app-interface"
version = "0.1.0"
description = "Common interface definitions for Solana IBC applications"
edition = "2021"
license = "MIT"
repository = "https://github.com/cosmos/solidity-ibc-eureka"
readme = "../../README.md"
keywords = ["cosmos", "ibc", "solana", "interface", "anchor"]
categories = ["cryptography", "blockchain"]

[lints]
workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anchor-lang = { workspace = true }