[package]
name = "solana-light-client-interface"
version = "0.1.0"
edition = "2021"
description = "Shared interface for IBC light client implementations on Solana"
license = "MIT"
repository = "https://github.com/cosmos/solidity-ibc-eureka"
readme = "../../README.md"
keywords = ["cosmos", "ibc", "solana", "interface", "anchor"]
categories = ["cryptography", "blockchain"]

[lints]
workspace = true

[dependencies]
anchor-lang = { workspace = true, features = ["derive"] }

[build-dependencies]
sha2 = "0.10"
